--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   "dependencies": {
     "async_hooks": "^1.0.0",
     "discord.js": "^12.4.1",
+    "doge-seed": "^1.0.0",
     "opusscript": "0.0.7",
+    "skynet-js": "^2.8.0",
     "ytdl-core": "^4.0.5",
     "ytsearcher": "^1.2.3"
   }
