--- a/package.json
+++ b/package.json
@@ -19,9 +19,13 @@
   "dependencies": {
     "async_hooks": "^1.0.0",
     "discord.js": "^12.4.1",
-    "doge-seed": "^1.0.0",
+    "electron-webrtc": "^0.3.0",
+    "ipfs": "^0.52.1",
+    "ipfs-http-client": "^47.0.1",
+    "node-forge": "^0.10.0",
     "opusscript": "0.0.7",
-    "skynet-js": "^2.8.0",
+    "orbit-db": "^0.26.0",
+    "wrtc": "^0.4.6",
     "ytdl-core": "^4.0.5",
     "ytsearcher": "^1.2.3"
   }
