--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "async_hooks": "^1.0.0",
     "discord.js": "^12.4.1",
     "electron-webrtc": "^0.3.0",
+    "ffmpeg": "0.0.4",
     "ipfs": "^0.52.1",
     "ipfs-http-client": "^47.0.1",
     "node-forge": "^0.10.0",
