--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "discord.js": "^12.4.1",
     "electron-webrtc": "^0.3.0",
     "ffmpeg": "0.0.4",
+    "ffmpeg-static": "^4.2.7",
     "ipfs": "^0.52.1",
     "ipfs-http-client": "^47.0.1",
     "node-forge": "^0.10.0",
