--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "ffmpeg-static": "^4.2.7",
     "ipfs": "^0.52.1",
     "ipfs-http-client": "^47.0.1",
+    "node-fetch": "^2.6.1",
     "node-forge": "^0.10.0",
     "opusscript": "0.0.7",
     "orbit-db": "^0.26.0",
