--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+    "engines": {
+    "node": ">=12.0"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/3scava1i3r/Zev.git"
