--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-ytkey = AIzaSyD3eFwC1tYANU7R7uEaKPQvA3MqNa_-G7I
-dskey = Nzc2Mzc3OTM1NjU2Nzc5Nzg2.X60ATA.G4xs6soKhVxgVdNwRGSV9O7jLsE
+ytkey = 
+dskey = 
