--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "electron-webrtc": "^0.3.0",
     "ffmpeg": "0.0.4",
     "ffmpeg-static": "^4.2.7",
-
+    "glitchy-ping": "^0.3.2",
     "node-fetch": "^2.6.1",
     "node-forge": "^0.10.0",
     "opusscript": "0.0.7",
